update priority option

--- a/src/Components/TodoItem/TodoItem.css
+++ b/src/Components/TodoItem/TodoItem.css
@@ -7,3 +7,11 @@
     display: flex;
     align-items: center;
 }
+
+
+@media only screen and (max-width: 600px) {
+    
+    .todoItem{
+        flex-wrap: wrap;
+    }
+  }
