--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,10 +1,10 @@
 .todoButton {
-    padding: 10px 15px;
-    margin-left: 10px;;
-    border: none;
-    background-color: var(--primary-color) ;
-    color: white;
-    font-weight: bold;
-    font-size: 1.2rem;
-    cursor: pointer;
+  padding: 10px 15px;
+  margin-left: 10px;
+  border: none;
+  background-color: var(--primary-color);
+  color: white;
+  font-weight: bold;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
