--- a/src/Components/TodoList/TodoList.css
+++ b/src/Components/TodoList/TodoList.css
@@ -1,55 +1,55 @@
-.todos{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    width: 35%;
-    margin: auto;
+.todos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  width: 35%;
+  margin: auto;
 }
 
-.todoMessage{
-    width: 300px;
-    margin: 10px 20px;
-    font-size: 1.6rem;
-    color: white;
-    word-wrap: break-word;
+.todoMessage {
+  width: 300px;
+  margin: 10px 20px;
+  font-size: 1.6rem;
+  color: white;
+  word-wrap: break-word;
 }
 
-.inprogressHeading{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 35%;
-    margin: auto;
+.inprogressHeading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 35%;
+  margin: auto;
 }
-.heading{
-    color: var(--primary-color);
-}
-
-.dropdown{
-    width: 100px;
-    margin-left: 20px;
+.heading {
+  color: var(--primary-color);
 }
 
-.inprogress{
-    margin: 20px;
-    margin-bottom: 30px;
+.dropdown {
+  width: 100px;
+  margin-left: 20px;
 }
-.draggingOver{
-    background-color: #C3BA85;
-    margin: 10px;
+
+.inprogress {
+  margin: 20px;
+  margin-bottom: 30px;
+}
+.draggingOver {
+  background-color: #c3ba85;
+  margin: 10px;
 }
 
 @media only screen and (max-width: 600px) {
-    .todos{
-        width: 90%;
-    }
-    .todoMessage{
-        width: 200px;
-        margin: 10px;
-    }
-    .dropdown{
-        margin-left: 5px;
-        width: 80px;
-    }
+  .todos {
+    width: 90%;
   }
+  .todoMessage {
+    width: 200px;
+    margin: 10px;
+  }
+  .dropdown {
+    margin-left: 5px;
+    width: 80px;
+  }
+}
