--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -2,7 +2,7 @@
   padding: 10px 15px;
   margin-left: 10px;
   border: none;
-  background-color: var(--primary-color);
+  background-color: #c84b31;
   color: white;
   font-weight: bold;
   font-size: 1.2rem;
