--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,6 +1,6 @@
 .todoButton {
   padding: 10px 15px;
-  margin-left: 10px;
+  margin: 10px;
   border: none;
   background-color: #c84b31;
   color: white;
