update detail page

--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -8,3 +8,10 @@
   font-size: 1.2rem;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 600px) {
+  .todoButton{
+    margin: 5px;
+  }
+  }
+
