--- a/src/Pages/AuthPage/Signup.css
+++ b/src/Pages/AuthPage/Signup.css
@@ -1,34 +1,47 @@
-.signup {
+.Form {
+  font-size: 1.3rem;
+  width: 30%;
+  margin: auto;
+  padding: 20px 30px;
   display: flex;
+  flex-direction: column;
+  background-color: #02383c;
+}
+.inputForm {
+  padding: 5px;
+  width: 95%;
+  height: 35px;
+  font-size: 1.2rem;
+  margin: 10px;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.field {
+  display: flex;
+  align-items: center;
+}
+.errorInfo {
+  color: red;
+  font-size: 1.3rem;
+}
+.signupHeading {
+  font-size: 1.3rem;
+  padding: 15px;
+  color: #c84b31;
+}
+.radioSelect {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  margin: 15px;
   font-size: 1.5rem;
 }
-.form-signup {
-  height: 400px;
-  border: 2px solid red;
-  width: 30%;
-}
-
-.signup__header {
-  margin: 20px;
-}
-.signup-block > input {
-  height: 30px;
-  margin: 10px;
-  font-size: 1.2rem;
-  width: 270px;
-}
-.info {
+.radioButtons {
   margin: 10px;
 }
-.signup-block {
-  font-weight: 600;
-}
 
-@media only screen and (max-width: 600px) {
-  .form-signup {
-    width: 100vw;
-    height: auto;
-    padding: 10px;
-  }
+.signupLink {
+  color: white;
 }
